@@ -72,7 +72,6 @@ void_bat_create(int adt, BUN nr)
 	b->tnosorted = 0;
 	b->tnorevsorted = 0;
 	b->tdense = FALSE;
-	b->tnodense = 0;
 	b->tkey = FALSE;
 	b->tnokey[0] = 0;
 	b->tnokey[1] = 0;
